--- a/install
+++ b/install
@@ -1,7 +1,7 @@
 #!/bin/bash
 
-# This script installs/updates the files in the directory this
-# script is located, to this machine.
+# This script installs the files in the project directory
+# to this machine.
 # It uses a file mapping file to configure what files it installs.
 # The file mapping is sourced into this script. The file mapping
 # must be a bash script that uses the functions defined in this install
@@ -110,7 +110,5 @@ install_to_directory() {
 }
 
 cd "$(dirname "$(realpath -e "$0")")" || error 'failed to cd into where install script is located.'
-
-./build
 
 source "$FILE_MAPPING"
